@@ -45,8 +45,11 @@ if ($domain===false) {
 	$PowerDNS->create_default_records ($values);
 }
 
+// fetch PTR records for current domain
+$ptr_indexes = $Addresses->ptr_get_subnet_indexes ($subnet->id);
+
 // remove existing records and links
-$PowerDNS->remove_all_ptr_records ($domain->id);
+$PowerDNS->remove_all_ptr_records ($domain->id, $ptr_indexes);
 $Addresses->ptr_unlink_subnet_addresses ($subnet->id);
 
 // fetch all hosts
